--- a/research.html
+++ b/research.html
@@ -94,7 +94,7 @@
 										</p>
 									</header>
 									<!-- <a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a> -->
-                                    <h3>Peer-reviewed journals</h3>
+                                    <h3>Peer-reviewed Journals</h3>
                                     <p>
                                     2024
                                     </p>
@@ -109,7 +109,6 @@
                                             <li>Belbe, S., Moldovan, D., Andries, A., <strong>Otto, P.</strong>, Mare, C. (2024): Evaluation of the space-time effects of Covid-19 on household loans and savings in Romania - A spatial panel data approach at county level. <span class="highlight-journal">Emerging Markets Review</span> (<a href="https://doi.org/10.1016/j.ememar.2024.101209">DOI</a>)</li>
                                             <li> Tzung, H. K., Pathmanathan, D., <strong>Otto, P.</strong>, Dabo-Niang, S. (2024): A Markov-switching spatio-temporal ARCH model. <span class="highlight-journal">Stat</span> (<a href="https://doi.org/10.1002/sta4.713">DOI</a>)</li>
                                             <li>Mohammadi, R., Taleai, M., <strong>Otto, P.</strong>, Sester, M. (2024): Analyzing urban crash incidents: an advanced endogenous approach using spatiotemporal weights matrix. <span class="highlight-journal">Transactions in GIS</span> 28(2) <a href="http://doi.org/10.1111/tgis.13138">(DOI)</a></li>
-                                            <li><strong>Otto, P.</strong>, Sibbertsen, P. (2024): Spatial autoregressive fractionally integrated moving average model. Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science. Springer (accepted for publication)</li>
                                             <li>Bahlau, S., Butenhof, F., Schumacher, R., Kelm, A., Meins-Becker, A., Indorf, K., Steinmann, R., Linhard, K., <strong>Otto, P.</strong>, Nasiriboroujeni, M. (2024): BIM-Effizienz: Innovatives Kostenmanagement auf Basis objektorientierter Bauwerksmodelle. BBSR-Online-Publikation 10/2024, Bonn <a href="https://www.bbsr.bund.de/BBSR/DE/veroeffentlichungen/bbsr-online/2024/bbsr-online-10-2024.html">(html)</a></li>
                                         </ul>
                                     </p>
@@ -197,9 +196,10 @@
                                             <li> Lange, A.-L., <strong>Otto, P.</strong> (2016): Bayes'sche Statistik in der Dienstleistungsforschung. <span class="highlight-journal">AStA Wirtschafts- und Sozialstatistisches Archiv</span> 10(4) <a href="https://doi.org/10.1007/s11943-016-0189-x">(DOI)</a></li>
                                         </ul>
                                     </p>
-                                    <h3>Peer-reviewed book chapters and conference proceedings</h3>
+                                    <h3>Peer-reviewed Book Chapters and Conference Proceedings</h3>
                                     <p>
                                         <ul>
+                                            <li><strong>Otto, P.</strong>, Sibbertsen, P. (2024): Spatial autoregressive fractionally integrated moving average model. Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science. Springer (<a href="https://doi.org/10.1007/978-3-031-69111-9_22">DOI</a>)</li>
                                             <li> Maranzano, P., McConville, K., <strong>Otto, P.</strong>, Carillo, F. (2023): A geostatistical investigation of the ammonia-livestock relationship in the Po Valley, Italy. Annual Meeting of the Italian Statistical Society 2023</li>
                                             <li> <strong>Otto, P.</strong> (2021): Parallelized Monitoring of Dependent Spatiotemporal Processes. In: Knoth S., Schmid W. (eds) Frontiers in Statistical Quality Control 13. ISQC 2019. Frontiers in Statistical Quality Control. Springer, Cham <a href="https://doi.org/10.1007/978-3-030-67856-2_10">(DOI)</a></li>
                                             <li> Malinovskaya A., <strong>Otto, P.</strong>,  Peters, T. (2021): Statistical learning for change point and anomaly detection in graphs. arXiv:2011.06080 (accepted: Springer Handbook on Artificial Intelligence, Big Data, Data Science and Machine Learning in Statistics) </li>
@@ -212,7 +212,7 @@
                                         </ul>
                                         
                                     </p>
-                                    <h3>Statistical software</h3>
+                                    <h3>Statistical Software</h3>
                                     <p>
                                         <ul>
                                             <li> <strong>Otto, P.</strong>: R-Package <tt>spGARCH</tt>. A collection of functions to deal with spatial and spatiotemporal autoregressive conditional heteroscedasticity (spatial ARCH and GARCH models) <a href="https://cran.r-project.org/web/packages/spGARCH/index.html">(CRAN)</a></li>
@@ -228,7 +228,7 @@
                                     <h3>Edited books</h3>
                                     <p>
                                         <ul>
-                                            <li> Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science -- Essays in Honour of Wolfgang Schmid. Knoth, S., Okhrin, Y., <strong>Otto, P.</strong> (eds), Springer Heidelberg <a href="https://link.springer.com/book/9783031691102">(Springer Link)</a>
+                                            <li> Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science -- Essays in Honour of Wolfgang Schmid. Knoth, S., Okhrin, Y., <strong>Otto, P.</strong> (eds), Springer Heidelberg <a href="https://doi.org/10.1007/978-3-031-69111-9">(DOI)</a>
                                         </ul>
                                     </p>
                                     <h3>Textbooks</h3>
