--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,7 @@
                                     Professor of Statistics and Data Science and top-10 researcher with an interdisciplinary profile and several publications in outstanding scientific journals (rated as top 6% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (5 ongoing, 2 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                     <p>
-                                    In my main research area (topic T.6863 "Spillover Effect; Panel Study; Autoregressive Model"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/6863">6th worldwide on Scopus</a> and 1st among UK researchers.
+                                    In my main research area (topic T.6863 "Spillover Effect; Panel Study; Autoregressive Model"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/6863">4th worldwide on Scopus</a> and 1st among UK researchers.
                                     <!-- In the area of topic T.7921, "Covariance Function; Spatio-Temporal; Variogram," which constitutes my second-largest research focus, I have achieved a <a href="https://www.scival.com/trends/authors/table?uri=Topic/7921">global ranking of 53</a>, which also places me in the 1st place among German researchers.-->
                                     </p>
                                     <p>
@@ -86,7 +86,7 @@
                                     Graduated PhD students: Miryam S. Merk (2021, Dr. rer. pol.), Anna Malinovskaya (2024, Dr.-Ing.)
                                     </p>
                                     <p>
-                                    Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca, Italy), Jacopo Rodeschini (2022, University of Bergamo, Italy), Alessandro Fusta Moro (2022, University of Turin, Italy), Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca, Romania), Caterina Morelli (2024, University of Milano-Bicocca, Italy), Pierfrancesco Fermani (2024, Sapienza Università di Roma)
+                                    Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca, Italy), Jacopo Rodeschini (2022, University of Bergamo, Italy), Alessandro Fusta Moro (2022, University of Turin, Italy), Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca, Romania), Caterina Morelli (2024, University of Milano-Bicocca, Italy), Pierfrancesco Fermani (2024, Sapienza Università di Roma), Vivien Less (Leibniz University Hannover)
                                     </p>
                                 </article>
                                 <article class="col-3 col-12-mobile special">
