--- a/research.html
+++ b/research.html
@@ -96,6 +96,14 @@
 									<!-- <a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a> -->
                                     <h3>Peer-reviewed Journals</h3>
                                     <p>
+                                    2025
+                                    </p>
+                                    <p>
+                                        <ul>
+                                            <li><strong>Otto, P.</strong> (2025): Discussion on “Assessing predictability of environmental time series with statistical and machine learning models” by Bonas et al. <span class="highlight-journal">Environmetrics</span> <a href="https://doi.org/10.1002/env.2898">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <p>
                                     2024
                                     </p>
                                     <p>
