--- a/research.html
+++ b/research.html
@@ -100,6 +100,7 @@
                                     </p>
                                     <p>
                                         <ul>
+                                            <li>Colombo, P., Mattera, R., <strong>Otto, P.</strong> (2025): Simple yet effective: a comparative study of statistical models for yearly hurricane forecasting <span class="highlight-journal">Environmetrics</span> (accepted for publication)</li>
                                             <li><strong>Otto, P.</strong> (2025): Discussion on “Assessing predictability of environmental time series with statistical and machine learning models” by Bonas et al. <span class="highlight-journal">Environmetrics</span> <a href="https://doi.org/10.1002/env.2898">(DOI)</a></li>
                                             <li>Morelli, C., Boccaletti, S., Maranzano, P., <strong>Otto, P.</strong> (2025): Multidimensional spatiotemporal clustering – An application to environmental sustainability scores in Europe. <span class="highlight-journal">Environmetrics</span> 36(2) <a href=" http://dx.doi.org/10.1002/env.2893">(DOI)</a></li>
                                         </ul>
