--- a/cv.html
+++ b/cv.html
@@ -86,7 +86,7 @@
                                     Graduated PhD students: Miryam S. Merk (2021, Dr. rer. pol.), Anna Malinovskaya (2024, Dr.-Ing.)
                                     </p>
                                     <p>
-                                    Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca, Italy), Jacopo Rodeschini (2022, University of Bergamo, Italy), Alessandro Fusta Moro (2022, University of Turin, Italy), Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca, Romania), Caterina Morelli (2024, University of Milano-Bicocca, Italy), Pierfrancesco Fermani (2024, Sapienza Università di Roma), Vivien Less (Leibniz University Hannover)
+                                    Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca, Italy), Jacopo Rodeschini (2022 + 2024/25, University of Bergamo, Italy), Alessandro Fusta Moro (2022, University of Turin, Italy), Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca, Romania), Caterina Morelli (2024, University of Milano-Bicocca, Italy), Pierfrancesco Fermani (2024, Sapienza Università di Roma), Vivien Less (Leibniz University Hannover), Lixue Sun (2025, Zhongnan University of Economics and Law, China), Atika Aouri (2025, University of Mila, Algeria).
                                     </p>
                                 </article>
                                 <article class="col-3 col-12-mobile special">
