--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">CV</a></h1>
+								<h1><a href="index.html" id="logo">Curriculum Vitae</a></h1>
 							</header>
 						</div>
 
@@ -57,6 +57,7 @@
                             </li>
                             <li><a href="teaching.html">Teaching</a></li>
                             <li><a href="cv.html">Curriculum Vitae</a></li>
+                            <li><a href="team.html">Team</a></li>
                         </ul>
                     </nav>
 
@@ -66,7 +67,7 @@
 				<div class="wrapper style1">
 
 					<div class="container">
-						<article id="main" class="special">
+						<article id="main">
 							<header>
 								<h2><a href="#">Curriculum Vitae</a></h2>
 							</header>
@@ -80,6 +81,17 @@
                                     <!-- In the area of topic T.7921, "Covariance Function; Spatio-Temporal; Variogram," which constitutes my second-largest research focus, I have achieved a <a href="https://www.scival.com/trends/authors/table?uri=Topic/7921">global ranking of 53</a>, which also places me in the 1st place among German researchers.-->
                                     </p>
                                     <p>
+                                        If you are interested in collaboration or supervision opportunities, feel free to
+                                        <script type="text/javascript">
+                                            var user = "philipp.otto";
+                                            var domain = "glasgow.ac.uk";
+                                            var subject = "?subject=Enquiry%20via%20website";
+                                            document.write('<a href="mailto:' + user + '@' + domain + subject + '">contact me by email.</a>');
+                                        </script>
+                                        <noscript>[enable JavaScript to view email]</noscript>
+                                    </p>
+                                    <!--
+                                    <p>
                                     My group currently consists of 6 PhD students: Franz H. Harke, Mohammadreza Nasiriboroujeni, Ariane Nidelle Meli Chrisko, Elkanah Nyabuto, Mireille Fangueng
                                     </p>
                                     <p>
@@ -88,6 +100,7 @@
                                     <p>
                                     Visiting PhD students and Post-Docs: Paolo Maranzano (2020, 2021, University of Milano-Bicocca, Italy), Jacopo Rodeschini (2022 + 2024/25, University of Bergamo, Italy), Alessandro Fusta Moro (2022, University of Turin, Italy), Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca, Romania), Caterina Morelli (2024, University of Milano-Bicocca, Italy), Pierfrancesco Fermani (2024, Sapienza Università di Roma), Vivien Less (Leibniz University Hannover), Lixue Sun (2025, Zhongnan University of Economics and Law, China), Atika Aouri (2025, University of Mila, Algeria).
                                     </p>
+                                    -->
                                 </article>
                                 <article class="col-3 col-12-mobile special">
                                     <a href="#" class="image"><img src="images/me.jpg" alt="" /></a>
@@ -130,6 +143,8 @@
                             <h3>Awards</h3>
                             <p>
                                 <dl>
+                                  <dt><b>2025:</b></dt>
+                                    <dd>Senior Fellow of "Recognising Excellence in Teaching" (RET) University of Glasgow</dd>
                                   <dt><b>22/08/2017 - 26/08/2017:</b></dt>
                                   <dd>Fellowship to attend the 6th Lindau Meeting on Economic Science, Novel Laureates Meeting</dd>
                                   <dt><b>12/07/2017-14/07/2017:</b></dt>
@@ -148,7 +163,7 @@
                                   <dt><b>Member:</b></dt>
                                   <dd>The Royal Statistical Society, German Statistical Society, The International Environmetrics Society (TIES), International Association for Statistical Computing, among others</dd>
                                   <dt><b>Reviewer:</b></dt>
-                                  <dd>German Research Foundation, Journal of Econometrics, Environmetrics Econometrics and Statistics, Annals of Regional Science, Atmospheric Environment, Journal of Business and Economic Statistics, among others</dd>
+                                  <dd>German Research Foundation, Journal of Econometrics, Environmetrics Econometrics and Statistics, Annals of Regional Science, Atmospheric Environment, Journal of Business and Economic Statistics, among many others</dd>
                                 </dl>
                             </p>
                             <h3>Research grants (selected)</h3>
