--- a/presentations.html
+++ b/presentations.html
@@ -68,6 +68,7 @@
                             </li>
                             <li><a href="teaching.html">Teaching</a></li>
                             <li><a href="cv.html">Curriculum Vitae</a></li>
+                            <li><a href="team.html">Team</a></li>
                         </ul>
                     </nav>
 
@@ -99,6 +100,7 @@
                                     <h3>Invited presentations at conferences (except CMStatistics)</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2025:</strong> Innovation & Society: Statistics and Data Science for Evaluation and Quality, Bressanone/Brixen</li>
                                             <li> <strong>2024:</strong> The Symposium on Spatiotemporal Data Science organised by Harvard University, Washington DC; COMPStat, Gießen</li>
                                             <li> <strong>2023:</strong> 35th Panhellenic and 1st International Statistics Conference, Athens</li>
                                             <li> <strong>2019:</strong> Panel Discussion at the CODE Conference, Research Institute for Cyber Defence and Smart Data, UniBW Munich</li>
@@ -107,6 +109,8 @@
                                     <h3>Invited presentations at research seminars and workshops</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2025:</strong> University of Edinburgh</li>
+                                            <li> <strong>2024:</strong> University of Perth</li>
                                             <li> <strong>2023:</strong> Fondazione Eni Enrico Mattei; University of Milan-Bicocca; Helmut Schmidt University Hamburg</li>
                                             <li> <strong>2022:</strong> Geoinformatics Forum University of Münster; European University Viadrina Frankfurt (Oder); International Research Training Group Hannover/Paris</li>
                                             <li> <strong>2021:</strong> University of Milan</li>
@@ -118,6 +122,7 @@
                                     <h3>Specialised workshops:</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2025:</strong> XVth International Workshop on Intelligent Statistical Quality Control, Lisbon </li>
                                             <li> <strong>2023:</strong> XIVth International Workshop on Intelligent Statistical Quality Control, Washington </li>
                                             <li> <strong>2019:</strong> XIIIth International Workshop on Intelligent Statistical Quality Control, Hongkong </li>
                                             <li> <strong>2016:</strong> XIIth International Workshop Intelligent Statistical Quality Control, Hamburg </li>
@@ -127,7 +132,8 @@
                                     <h3>Conferences (since 2016):</h3>
                                     <p>
                                         <ul>
-                                            <li> <strong>2024:</strong> World Spatial Econometrics Conference, Groningen; COMPStat, Gießen</li>
+                                            <li> <strong>2025:</strong> IES Bressanone/Brixen; German Statistical Week, Wiesbaden</li>
+                                            <li> <strong>2024:</strong> World Spatial Econometrics Conference, Groningen; COMPStat, Gießen; German Statistical Week Regensburg, CMStatistics London</li>
                                             <li> <strong>2023:</strong> German Probability and Stochastic Days, Essen</li>
                                             <li> <strong>2022:</strong> World Spatial Econometrics Conference, Warsaw; metma-X, Lleida; Statistical Week Münster; CMStatistics London</li>
                                             <li> <strong>2021:</strong> Statistical Week Kiel</li>
