--- a/research.html
+++ b/research.html
@@ -75,6 +75,7 @@
                             </li>
                             <li><a href="teaching.html">Teaching</a></li>
                             <li><a href="cv.html">Curriculum Vitae</a></li>
+                            <li><a href="team.html">Team</a></li>
                         </ul>
                     </nav>
 
@@ -100,7 +101,8 @@
                                     </p>
                                     <p>
                                         <ul>
-                                            <li>Tedesco, L., Rodeschini, J., <strong>Otto, P.</strong> (2025): Computational Benchmark Study in Spatio-Temporal Statistics with a Hands-On Guide to Optimise R. <span class="highlight-journal">Environmetrics</span> (accepted, <a href="https://doi.org/10.1002/env.70017">DOI</a>)</li>
+                                            <li><strong>Otto, P.</strong>, Dogan, O., Taspinar, S., Schmid, W., Bera, A. K. (2025): Spatial and Spatiotemporal Volatility Models: A Review. <span class="highlight-journal">Journal of Economic Surveys</span> 39(3) <a href="https://doi.org/10.1111/joes.12643">(DOI)</a></li>
+                                            <li>Tedesco, L., Rodeschini, J., <strong>Otto, P.</strong> (2025): Computational Benchmark Study in Spatio-Temporal Statistics with a Hands-On Guide to Optimise R. <span class="highlight-journal">Environmetrics</span> 36(5) <a href="https://doi.org/10.1002/env.70017">(DOI)</a></li>
                                             <li>Colombo, P., Mattera, R., <strong>Otto, P.</strong> (2025): Simple yet effective: a comparative study of statistical models for yearly hurricane forecasting. <span class="highlight-journal">Environmetrics</span> <a href="https://doi.org/10.1002/env.70009">(DOI)</a></li>
                                             <li>Morelli, C., Boccaletti, S., Maranzano, P., <strong>Otto, P.</strong> (2025): Multidimensional spatiotemporal clustering – An application to environmental sustainability scores in Europe. <span class="highlight-journal">Environmetrics</span> 36(2) <a href=" http://dx.doi.org/10.1002/env.2893">(DOI)</a></li>
                                             <li>Heumann, M., Kraschewski, T., <strong>Otto, P.</strong>, Tilch, L., Brauner, T., Breitner, M. H. (2025): Factors influencing the usage of shared micromobility: Implications from Berlin. <span class="highlight-journal">Journal of Cycling and Micromobility Research</span> <a href="https://doi.org/10.1016/j.jcmr.2025.100063">(DOI)</a></li>
@@ -112,7 +114,6 @@
                                     </p>
                                     <p>
                                         <ul>
-                                            <li><strong>Otto, P.</strong>, Dogan, O., Taspinar, S., Schmid, W., Bera, A. K. (2024): Spatial and Spatiotemporal Volatility Models: A Review. <span class="highlight-journal">Journal of Economic Surveys</span> <a href="https://doi.org/10.1111/joes.12643">(DOI)</a></li>
                                             <li><strong>Otto, P.</strong>, Fassò, A., Maranzano, P. (2024): A review of regularised estimation methods and cross-validation in spatiotemporal statistics. <span class="highlight-journal">Statistics Surveys</span> <a href="https://doi.org/10.1214/24-SS150">(DOI)</a></li>
                                             <li><strong>Otto, P.</strong> (2024): A multivariate spatial and spatiotemporal ARCH model. <span class="highlight-journal">Spatial Statistics</span> 60 <a href="https://doi.org/10.1016/j.spasta.2024.100823">(DOI)</a></li>
                                             <li> Malinovskaya, A., Mozharovskyi, P., <strong>Otto, P.</strong> (2024): Statistical process monitoring of artificial neural networks. <span class="highlight-journal">Technometrics</span> 66(1) (<a href="https://doi.org/10.1080/00401706.2023.2239886">DOI</a>, <a href="https://www.tandfonline.com/doi/suppl/10.1080/00401706.2023.2239886?scroll=top" target="_blank" rel="noopener noreferrer">R/Python-Code</a>)</li>
@@ -214,7 +215,7 @@
                                     <p>
                                         <ul>
                                             <li><strong>Otto, P.</strong>, Sibbertsen, P. (2024): Spatial autoregressive fractionally integrated moving average model. Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science. Springer (<a href="https://doi.org/10.1007/978-3-031-69111-9_22">DOI</a>)</li>
-                                            <li> Maranzano, P., McConville, K., <strong>Otto, P.</strong>, Carillo, F. (2023): A geostatistical investigation of the ammonia-livestock relationship in the Po Valley, Italy. Annual Meeting of the Italian Statistical Society 2023</li>
+                                            <li> Maranzano, P., McConville, K., <strong>Otto, P.</strong>, Carillo, F. (2023): A geostatistical investigation of the ammonia-livestock relationship in the Po Valley, Italy. Annual Meeting of the Italian Statistical Society 2023, ISBN 9788891935618AAVV (<a href="https://it.pearson.com/content/dam/region-core/italy/pearson-italy/pdf/Docenti/Università/bozza-book-compresso.pdf">Link</a>)</li>
                                             <li> <strong>Otto, P.</strong> (2021): Parallelized Monitoring of Dependent Spatiotemporal Processes. In: Knoth S., Schmid W. (eds) Frontiers in Statistical Quality Control 13. ISQC 2019. Frontiers in Statistical Quality Control. Springer, Cham <a href="https://doi.org/10.1007/978-3-030-67856-2_10">(DOI)</a></li>
                                             <li> Malinovskaya A., <strong>Otto, P.</strong>,  Peters, T. (2021): Statistical learning for change point and anomaly detection in graphs. arXiv:2011.06080 (accepted: Springer Handbook on Artificial Intelligence, Big Data, Data Science and Machine Learning in Statistics) </li>
                                             <li> <strong>Otto, P.</strong> (2019): Modeling Spatial Dependence in Local Risks and Uncertainties. Proceedings of the
