--- a/bikes.html
+++ b/bikes.html
@@ -57,6 +57,7 @@
                             </li>
                             <li><a href="teaching.html">Teaching</a></li>
                             <li><a href="cv.html">Curriculum Vitae</a></li>
+                            <li><a href="team.html">Team</a></li>
                         </ul>
                     </nav>
 
