--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                                 </li>
 								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="cv.html">Curriculum Vitae</a></li>
+                                <li><a href="team.html">Team</a></li>
 							</ul>
 						</nav>
 
@@ -201,7 +202,7 @@
                         <!-- <a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a> -->
 						<p>
                         
-                        Since July 2024, I have been a <a href="https://www.gla.ac.uk/schools/mathematicsstatistics/staff/philippotto/">Professor of Statistics and Data Science</a> at the School of Mathematics and Statistics at the University of Glasgow, following a year as an Associate Professor (Reader) from 2023 to 2024. Additionally, I regularly teach in the PhD and M.Sc. programs at the <a href="https://disa.unibg.it/it">Department of Engineering and Applied Sciences, University of Bergamo</a>, Italy, as a Guest Professor. Before joining the University of Glasgow, I spent four years as an <a href="https://www.ikg.uni-hannover.de/en/institut/personenverzeichnis/philipp-otto">Assistant Professor of Big Geospatial Data</a> at the <a href="https://www.ikg.uni-hannover.de/en/">Institute of Cartography and Geoinformatics, Leibniz University Hannover</a>. During the 2020-2021 academic year, I was honoured to be a Visiting Professor of Spatial Data Analysis and Statistical Learning at the <a href="https://www.uni-goettingen.de/en/2165.html">University of Göttingen</a>. Earlier, I led a <a href="projects.html">junior research group</a> focused on detecting and monitoring spatial and spatiotemporal clusters at the Viadrina Center B/ORDERS IN MOTION at the European University in Frankfurt (Oder), where I also earned my Ph.D. in Statistics in 2016.
+                        Since July 2024, I have been a <a href="https://www.gla.ac.uk/schools/mathematicsstatistics/staff/philippotto/">Professor of Statistics and Data Science</a> at the School of Mathematics and Statistics at the University of Glasgow, following a year as an Associate Professor (Reader) from 2023 to 2024. In June 2025, I was recognised as a <a href="https://www.gla.ac.uk/myglasgow/add/ret/">Senior Fellow of Recognising Excellence in Teaching (RET)</a> at the University of Glasgow, in recognition of my sustained commitment to high-quality, research-informed teaching  and academic leadership. Additionally, I regularly teach in the PhD and M.Sc. programs at the <a href="https://disa.unibg.it/it">Department of Engineering and Applied Sciences, University of Bergamo</a>, Italy, as a Guest Professor. Before joining the University of Glasgow, I spent four years as an <a href="https://www.ikg.uni-hannover.de/en/institut/personenverzeichnis/philipp-otto">Assistant Professor of Big Geospatial Data</a> at the <a href="https://www.ikg.uni-hannover.de/en/">Institute of Cartography and Geoinformatics, Leibniz University Hannover</a>. During the 2020-2021 academic year, I was honoured to be a Visiting Professor of Spatial Data Analysis and Statistical Learning at the <a href="https://www.uni-goettingen.de/en/2165.html">University of Göttingen</a>. Earlier, I led a <a href="projects.html">junior research group</a> focused on detecting and monitoring spatial and spatiotemporal clusters at the Viadrina Center B/ORDERS IN MOTION at the European University in Frankfurt (Oder), where I also earned my Ph.D. in Statistics in 2016.
 						</p>
                         <p>
                         In my main research area (topic T.6863 "Spillover Effect; Panel Study; Autoregressive Model"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/6863">4th worldwide on Scopus</a> and 1st among UK researchers (rated as top 5% scientists with their first publication in 2016 on ResearchGate, across all disciplines).
@@ -212,6 +213,17 @@
                         </p>
 						<footer>
 							<a href="cv.html" class="button">Continue to my CV</a>
+                            <span id="email-button"></span>
+                                <script type="text/javascript">
+                                    var user = "philipp.otto";
+                                    var domain = "glasgow.ac.uk";
+                                    var subject = "?subject=Enquiry%20via%20website";
+                                    var link = '<a class="button" href="mailto:' + user + '@' + domain + subject + '">Email me</a>';
+                                    document.getElementById("email-button").innerHTML = link;
+                                </script>
+                                <noscript>
+                                    <p>[Enable JavaScript to email me]</p>
+                                </noscript>
 						</footer>
 					</article>
 
@@ -226,6 +238,8 @@
 							<p>Below I update from time to time some news from my research, my externally funded projects and teaching.</p>
 						</header>
 						<div class="row">
+                            
+                            <!--
                             <article class="col-4 col-12-mobile special">
                                 <a href="agrimonia.html" class="image featured"><img src="images/pic05_agrimonia.jpg" alt="" /></a>
                                 <header>
@@ -238,6 +252,7 @@
                                     The accompanying paper is availabe open-access in nature Scientific Data <a href="https://doi.org/10.1038/s41597-023-02034-0">(DOI)</a>
                                 </p>
                             </article>
+                            -->
                             <!--
 							<article class="col-4 col-12-mobile special">
 								<a href="bikes.html" class="image featured"><img src="images/pic05_nn.jpg" alt="" /></a>
@@ -252,27 +267,50 @@
                                 </p>
 							</article>
                             -->
-							<article class="col-4 col-12-mobile special">
-								<a href="projects.html" class="image featured"><img src="images/pic08_n.jpg" alt="" /></a>
-								<header>
-									<h3><a href="projects.html">New funding - Call for applications</a></h3>
-								</header>
-								<p>
-                                    I am looking for new research assistants (PhD students) for the project "Time series analysis of historical maps." The project deals with statistical modelling of geo-referenced time series from historical maps, mainly generalised additive models.
-								</p>
+                            <article class="col-4 col-12-mobile special">
+                                <a href="cv.html" class="image featured"><img src="images/pic08_n.jpg" alt="PhD call" /></a>
+                                <header>
+                                    <h3><a href="cv.html">Interested in a PhD?</a></h3>
+                                </header>
                                 <p>
-                                    If you are interested, please feel free to contact me by email (attaching your current CV and references, such as papers, theses, etc., if available).
+                                    I welcome applications from motivated students interested in pursuing a PhD in <strong>Statistics</strong>, particularly in areas such as spatiotemporal modelling, statistical learning, and applied environmetrics.
+                                    Applicants should have a strong background in statistics or related quantitative disciplines, and a keen interest in methodological development.
+                                    If you are interested, feel free to
+                                    <script type="text/javascript">
+                                                var user = "philipp.otto";
+                                                var domain = "glasgow.ac.uk";
+                                                var subject = "?subject=Application%20PhD%20(redirected%20from%20website)";
+                                                document.write('<a href="mailto:' + user + '@' + domain + subject + '">contact me.</a>');
+                                    </script>
+                                    <noscript>[enable JavaScript to view email]</noscript> Please attach your CV and a scientific writing sample, such as your Master's thesis, a scientific paper, or a project report.
                                 </p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="teaching.html" class="image featured"><img src="images/pic09_n.jpg" alt="" /></a>
-								<header>
-									<h3><a href="teaching.html">Teaching concept - Research seminar</a></h3>
-								</header>
-								<p>
-                                    Inspired by the concept of Johannssen, A., N. Chukhrova, F. Schmal and K. Stabenow (2021): Statistical Literacy – Misuse of Statistics and its Consequences (Journal of Statistics and Data Science Education, 29(1), pp. 54–62.), I now teach my seminar on "Monitoring of Spatiotemporal and Network Data" in a research format, including writing a small scientific paper, double-blind peer reviews, revision process and colloquium presentation.
-								</p>
-							</article>
+                            </article>
+                            <article class="col-4 col-12-mobile special">
+                                <a href="teaching.html" class="image featured"><img src="images/pic09_n.jpg" alt="" /></a>
+                                <header>
+                                    <h3><a href="teaching.html">Senior Fellow of RET "Recognising Excellence in Teaching"</a></h3>
+                                </header>
+                                <p>
+                                    In June 2025, I was recognised as a <strong>Senior Fellow of Recognising Excellence in Teaching (RET)</strong> at the University of Glasgow for my sustained commitment to high-quality, research-informed academic teaching.
+                                    One example is my research seminar on <em>“Monitoring of Spatiotemporal and Network Data”</em>, which adopts a full scientific workflow: students write a short research paper, undergo a double-blind peer review, revise their work, and present their findings in a colloquium.
+                                </p>
+                            </article>
+                            <article class="col-4 col-12-mobile special">
+                                <a href="https://link.springer.com/book/10.1007/978-3-031-69111-9" class="image featured">
+                                    <img src="images/SM_Image_Horizontal_978-3-031-69111-9.png" alt="Springer Book Announcement" />
+                                </a>
+                                <header>
+                                    <h3><a href="https://link.springer.com/book/10.1007/978-3-031-69111-9">New Springer Book Published</a></h3>
+                                </header>
+                                <p>
+                                    The edited volume <strong><em>Advanced Statistical Methods in Process Monitoring, Finance, and Environmental Science – Essays in Honour of Wolfgang Schmid</em></strong> is now published with Springer.
+                                    The book brings together contributions on cutting-edge statistical methodology, reflecting developments in time series analysis, process control, and spatial modelling.
+                                </p>
+                                <p>
+                                    Edited by Sven Knoth, Yarema Okhrin, and Philipp Otto.
+                                    Available <a href="https://link.springer.com/book/10.1007/978-3-031-69111-9" target="_blank">via SpringerLink</a>.
+                                </p>
+                            </article>
 						</div>
 					</section>
 
