--- a/teaching.html
+++ b/teaching.html
@@ -57,6 +57,7 @@
                             </li>
                             <li><a href="teaching.html">Teaching</a></li>
                             <li><a href="cv.html">Curriculum Vitae</a></li>
+                            <li><a href="team.html">Team</a></li>
                         </ul>
                     </nav>
 
@@ -71,6 +72,9 @@
 								<article id="main">
 									<header>
 										<h2><a href="#">Current courses</a></h2>
+                                        <p>
+                                            Senior Fellow of "Recognising Excellence in Teaching" (RET) University of Glasgow
+                                        </p>
 										<p>
                                             I currently teach the following courses at the University of Glasgow and the University of Bergamo.
 										</p>
