--- a/team.html
+++ b/team.html
@@ -55,11 +55,11 @@
                             </div>
                             <div class="col-6 col-12-mobile">
                                 <h4>Ariane Nidelle Meli Chrisko (University of Glasgow)</h4>
-                                <p>Spatial econometric volatility models for assymetric dependencies and comparison of spatiotemporal GARCH models for financial networks</p>
+                                <p>Spatial econometric volatility models for asymmetric dependencies and comparison of spatiotemporal GARCH models for financial networks</p>
                             </div>
                             <div class="col-6 col-12-mobile">
                                 <h4>Elkanah Nyabuto (University of Glasgow)</h4>
-                                <p>Regularised estimation methods for spatiotemporal autoregressive and GARCH models</p>
+                                <p>Regularised estimation methods for spatiotemporal autoregressive and ARCH models</p>
                             </div>
                             <div class="col-6 col-12-mobile">
                                 <h4>Mireille Fangueng (Leibniz University Hannover)</h4>
@@ -99,7 +99,7 @@
                             <li>Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca)</li>
                             <li>Caterina Morelli (2024, University of Milano-Bicocca)</li>
                             <li>Pier Francesco Fermani (2024, Sapienza Università di Roma)</li>
-                            <li>Vivien Less (Leibniz University Hannover)</li>
+                            <li>Vivien Less (2024, Leibniz University Hannover)</li>
                             <li>Lixue Sun (2025, Zhongnan University of Economics and Law)</li>
                             <li>Atika Aouri (2025, University of Mila, Algeria)</li>
                         </ul>
