--- a/team.html
+++ b/team.html
@@ -98,10 +98,10 @@
                             <li>Alessandro Fusta Moro (2022, University of Turin)</li>
                             <li>Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca)</li>
                             <li>Caterina Morelli (2024, University of Milano-Bicocca)</li>
-                            <li>Pier Francesco Fermani (2024, Sapienza Università di Roma)</li>
+                            <li>Pier Francesco Fermani (2024, Sapienza University of Rome)</li>
                             <li>Vivien Less (2024, Leibniz University Hannover)</li>
                             <li>Lixue Sun (2025, Zhongnan University of Economics and Law)</li>
-                            <li>Atika Aouri (2025, University of Mila, Algeria)</li>
+                            <li>Atika Aouri (2025, University Center Abdelhafid Boussouf, Mila, Algeria)</li>
                         </ul>
                     </section>
 
