--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <meta name="msapplication-TileColor" content="#2b5797">
         <meta name="msapplication-TileImage" content="/mstile-150x150.png">
         
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+            
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -191,7 +193,7 @@
                 <header>
                     <h2>About me</h2>
                     <p>
-                        Statistician and data scientist with strong interest in environmental research
+                        Professor of Statistics and Data Science at the University of Glasgow
                     </p>
                 </header>
             </section>
@@ -210,6 +212,52 @@
                         </p>
                         <p>
                         I am honoured to be a part of Carl Friedrich Gauss's <a href="https://www.genealogy.math.ndsu.nodak.edu/id.php?id=18231">academic lineage</a> in the 9th generation, joining the group of 113,184 individuals who have followed in his scholarly footsteps  (<a href="https://www.genealogy.math.ndsu.nodak.edu/index.php">The Mathematics Genealogy Project</a>). You can find my full academic genealogy <a href="otto.pdf">here</a>.
+                        </p>
+                        <p>
+                        ORCID:  <a
+                            id="cy-effective-orcid-url"
+                            class="underline"
+                             href="https://orcid.org/0000-0002-9796-6682"
+                             target="orcid.widget"
+                             rel="me noopener noreferrer"
+                             style="vertical-align: top">
+                             <img
+                                src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
+                                style="width: 1em; margin-inline-start: 0.5em"
+                                alt="ORCID iD icon"/>
+                              https://orcid.org/0000-0002-9796-6682
+                            </a>
+                        </br>
+                        Google Scholar:  <a
+                            id="cy-effective-orcid-url"
+                            class="underline"
+                             href="https://scholar.google.de/citations?user=URsnzm8AAAAJ"
+                             style="vertical-align: top">
+                             <img
+                                src="images/Google_scholar_logo.svg.png"
+                                style="width: 1em; margin-inline-start: 0.5em"
+                                alt="Google Scholar icon"/>
+                                https://scholar.google.de/citations?user=URsnzm8AAAAJ
+                            </a>
+                        </br>
+                        LinkedIn: <a
+                          id="cy-effective-linkedin-url"
+                          class="underline"
+                          href="https://www.linkedin.com/in/philipp-otto-0a9887264/"
+                          target="_blank"
+                          rel="me noopener noreferrer"
+                          style="vertical-align: top">
+                          <svg
+                              xmlns="http://www.w3.org/2000/svg"
+                              role="img"
+                              viewBox="0 0 24 24"
+                              style="width: 1em; margin-inline-start: 0.5em; vertical-align: middle; fill: #0077B5;"
+                            >
+                              <title>LinkedIn</title>
+                              <path d="M20.447 20.452h-3.554v-5.569c0-1.327-.025-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.368-1.852 3.6 0 4.268 2.368 4.268 5.451v6.292zM5.337 7.433c-1.144 0-2.07-.927-2.07-2.07 0-1.144.926-2.07 2.07-2.07 1.144 0 2.07.926 2.07 2.07 0 1.143-.926 2.07-2.07 2.07zm1.777 13.019H3.56V9h3.554v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0z"/>
+                            </svg>
+                            https://www.linkedin.com/in/philipp-otto-0a9887264/
+                        </a>
                         </p>
 						<footer>
 							<a href="cv.html" class="button">Continue to my CV</a>
@@ -433,8 +481,9 @@
                                             <p>You can also find my profiles here:</p>
                                             <ul class="icons">
                                                 <li><a href="https://www.researchgate.net/profile/Philipp-Otto-2" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
-                                                <li><a href="https://www.instagram.com/stats.o.phil.e/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                                <li><a href="https://orcid.org/0000-0002-9796-6682" class="icon brands fa-orcid"><span class="label">ORCID</span></a></li>
                                                 <li><a href="https://www.linkedin.com/in/philipp-otto-0a9887264/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                                <li><a href="https://www.instagram.com/stats.o.phil.e/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                                                 <li><a href="https://www.xing.com/profile/Philipp_Otto8/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
                                                 <li><a href="https://twitter.com/PhilOt5" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                             </ul>
