--- a/team.html
+++ b/team.html
@@ -50,6 +50,14 @@
                         <p></p>
                         <div class="row gtr-50">
                             <div class="col-6 col-12-mobile">
+                                <h4>Ding Wang (University of Glasgow)</h4>
+                                <p>Hybrid models for volatility prediction on financial networks</p>
+                            </div>
+                            <div class="col-6 col-12-mobile">
+                                <h4>Khaloud Al Ajmi  (University of Glasgow)</h4>
+                                <p>Hybrid statistical modelling techniques in environmetrics.</p>
+                            </div>
+                            <div class="col-6 col-12-mobile">
                                 <h4>Mohammadreza Nasiriboroujeni (Leibniz University Hannover)</h4>
                                 <p>Methods for statistical process monitoring for spatiotemporal functional data and additive manufacturing.</p>
                             </div>
@@ -93,15 +101,17 @@
                         <h3>Visiting PhD Students and Postdocs</h3>
                         <p></p>
                         <ul>
-                            <li>Paolo Maranzano (2020, 2021, University of Milano-Bicocca)</li>
-                            <li>Jacopo Rodeschini (2022, 2024/25, University of Bergamo)</li>
-                            <li>Alessandro Fusta Moro (2022, University of Turin)</li>
-                            <li>Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca)</li>
-                            <li>Caterina Morelli (2024, University of Milano-Bicocca)</li>
-                            <li>Pier Francesco Fermani (2024, Sapienza University of Rome)</li>
-                            <li>Vivien Less (2024, Leibniz University Hannover)</li>
-                            <li>Lixue Sun (2025, Zhongnan University of Economics and Law)</li>
+                            <li>Paolo Maranzano (2020, 2021, University of Milano-Bicocca, Italy)</li>
+                            <li>Jacopo Rodeschini (2022, 2024/25, University of Bergamo, Italy)</li>
+                            <li>Alessandro Fusta Moro (2022, University of Turin, Italy)</li>
+                            <li>Stefana Belbe (2023, Babeș-Bolyai University of Cluj-Napoca, Romania)</li>
+                            <li>Caterina Morelli (2024, University of Milano-Bicocca, Italy)</li>
+                            <li>Pier Francesco Fermani (2024, Sapienza University of Rome, Italy)</li>
+                            <li>Vivien Less (2024, Leibniz University Hannover, Germany)</li>
+                            <li>Lixue Sun (2025-26, Zhongnan University of Economics and Law, China)</li>
                             <li>Atika Aouri (2025, University Center Abdelhafid Boussouf, Mila, Algeria)</li>
+                            <li>Nicola Crespi (2025, University of Milan-Bicocca, Italy)</li>
+                            <li>Dost Muhammad Khan (2025-26, Abdul Wali Khan University Mardan, Pakistan)</li>
                         </ul>
                     </section>
 
