--- a/cv.html
+++ b/cv.html
@@ -74,7 +74,7 @@
                             <div class="row">
                                 <article class="col-8 col-12-mobile special">
                                     <p>
-                                    Professor of Statistics and Data Science and top-10 researcher with an interdisciplinary profile and several publications in outstanding scientific journals (rated as top 5% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 7 Ph.D. dissertations (5 ongoing, 2 complete) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
+                                    Professor of Statistics and Data Science and top-10 researcher with an interdisciplinary profile and several publications in outstanding scientific journals (rated as top 5% scientists with their first publication in 2016 on ResearchGate). Supervised 20+ B.Sc. and M.Sc. theses, 9 Ph.D. dissertations (7 ongoing, 2 complete, see <a href="team.html">Team</a>) with strong philosophy of teaching applied statistics. In my young academic career since 2016, when I did my Ph.D. in statistics, I received research grants of over 1,000,000 euros. I am also actively involved in the scientific community as associate editor of 3 journals and treasurer of the German Statistical Society.
                                     </p>
                                     <p>
                                     In my main research area (topic T.6863 "Spillover Effect; Panel Study; Autoregressive Model"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/6863">4th worldwide on Scopus</a> and 1st among UK researchers.
@@ -204,12 +204,14 @@
                                   <dd>Environmetrics, AStA Advances in Statistical Analysis, AStA Wirtschafts- und Sozialstatistisches Archiv</dd>
                                   <dt><b>Elected member:</b></dt>
                                   <dd>The Young Braunschweig Scientific Society</dd>
-                                  <dt><b>Treasurer and board member:</b></dt>
+                                  <dt><b>Board member and treasurer:</b></dt>
+                                  <dd>German Statistical Society</dd>
+                                  <dt><b>Head of Section "Computational Statistics and Data Science"</b></dt>
                                   <dd>German Statistical Society</dd>
                                   <dt><b>Member:</b></dt>
                                   <dd>The Royal Statistical Society, German Statistical Society, The International Environmetrics Society (TIES), International Association for Statistical Computing, among others</dd>
                                   <dt><b>Reviewer:</b></dt>
-                                  <dd>German Research Foundation, Journal of Econometrics, Environmetrics Econometrics and Statistics, Annals of Regional Science, Atmospheric Environment, Journal of Business and Economic Statistics, among many others</dd>
+                                  <dd>German Research Foundation, Journal of Econometrics, Environmetrics, Econometrics and Statistics, Journal of Quality Technology, Atmospheric Environment, Journal of Business and Economic Statistics, among many others</dd>
                                 </dl>
                             </p>
                             <h3>Research grants (selected)</h3>
