--- a/presentations.html
+++ b/presentations.html
@@ -88,6 +88,8 @@
                                     <h3>Organised sessions and workshops</h3>
                                     <p>
                                         <ul>
+                                            <li> <strong>2025:</strong> Scientific program committee member of German Statistical Week 2025, Wiesbaden</li>
+                                            <li> <strong>2024:</strong> Scientific program committee member of German Statistical Week 2024, Regensburg</li>
                                             <li> <strong>2023:</strong> Scientific program committee member of IMS International Conference on Statistics and Data Science and CMStatistics London, Session on "Spatiotemporal Data Analytics" Statistical Week Dortmund (together with Carsten Jentsch; keynote talk by Sudipto Banerjee)</li>
                                             <li> <strong>2022:</strong> Scientific program committee member and session on “Spatial data science”, CMStatistics London; Session on “Spatial and spatiotemporal statistics”, DAGStat Hamburg (invited talk by Matthias Katzfuß)</li>
                                             <li> <strong>2021:</strong> Session on “Spatial data science”, CMStatistics London (invited talk by Osman Dogan)</li>
@@ -109,9 +111,9 @@
                                     <h3>Invited presentations at research seminars and workshops</h3>
                                     <p>
                                         <ul>
-                                            <li> <strong>2025:</strong> University of Edinburgh</li>
+                                            <li> <strong>2025:</strong> University of Edinburgh, Goethe-University Frankfurt</li>
                                             <li> <strong>2024:</strong> University of Perth</li>
-                                            <li> <strong>2023:</strong> Fondazione Eni Enrico Mattei; University of Milan-Bicocca; Helmut Schmidt University Hamburg</li>
+                                            <li> <strong>2023:</strong> Fondazione Eni Enrico Mattei; University of Milan-Bicocca; Helmut Schmidt University Hamburg, Federal Institute for Geosciences and Natural Resources</li>
                                             <li> <strong>2022:</strong> Geoinformatics Forum University of Münster; European University Viadrina Frankfurt (Oder); International Research Training Group Hannover/Paris</li>
                                             <li> <strong>2021:</strong> University of Milan</li>
                                             <li> <strong>2020:</strong> University of Bergamo; University of Augsburg</li>
