update cv and header image

--- a/cv.html
+++ b/cv.html
@@ -122,8 +122,7 @@
                                     <p>
                                     In my main research area (topic T.6863 "Spillover Effect; Panel Study; Autoregressive Model"), I am currently ranked <a href="https://www.scival.com/trends/authors/table?uri=Topic/6863">4th worldwide on Scopus</a> and 1st among UK researchers.
                                     <!-- In the area of topic T.7921, "Covariance Function; Spatio-Temporal; Variogram," which constitutes my second-largest research focus, I have achieved a <a href="https://www.scival.com/trends/authors/table?uri=Topic/7921">global ranking of 53</a>, which also places me in the 1st place among German researchers.-->
-                                    </p>
-                                    <p>
+                                    <br/>
                                     ORCID:  <a
                                         id="cy-effective-orcid-url"
                                         class="underline"
@@ -178,6 +177,9 @@
                                             document.write('<a href="mailto:' + user + '@' + domain + subject + '">contact me by email.</a>');
                                         </script>
                                         <noscript>[enable JavaScript to view email]</noscript>
+                                    </p>
+                                    <p>
+                                    I am married and father of two sons (born 2023 and 2025). Outside academia, I enjoy spending time with my family at the seaside or skiing in the mountains. If not doing statistics, you will most likely find me outdoors with my wife and kids, walking through Mugdock Country Park, or along the Clyde Coastal Path, where I am a path guardian as a Rotarian.
                                     </p>
                                     <!--
                                     <p>
